--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>About Me</title>
-        <link rel="stylesheet" href="http://lazka.github.io/theme/css/main.css" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,11 +12,11 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://lazka.github.io/">Title </a></h1>
+                <h1><a href="/">Title </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="http://lazka.github.io/pages/about-me.html">About Me</a></li>
-                    <li><a href="http://lazka.github.io/pages/projects.html">Projects</a></li>
-                    <li><a href="http://lazka.github.io/category/blog.html">Blog</a></li>
+                    <li class="active"><a href="/pages/about-me.html">About Me</a></li>
+                    <li><a href="/pages/projects.html">Projects</a></li>
+                    <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
