--- a/archives.html
+++ b/archives.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>Title</title>
-        <link rel="stylesheet" href="http://lazka.github.io/theme/css/main.css" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,11 +12,11 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://lazka.github.io/">Title </a></h1>
+                <h1><a href="/">Title </a></h1>
                 <nav><ul>
-                    <li><a href="http://lazka.github.io/pages/about-me.html">About Me</a></li>
-                    <li><a href="http://lazka.github.io/pages/projects.html">Projects</a></li>
-                    <li><a href="http://lazka.github.io/category/blog.html">Blog</a></li>
+                    <li><a href="/pages/about-me.html">About Me</a></li>
+                    <li><a href="/pages/projects.html">Projects</a></li>
+                    <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -24,7 +24,7 @@
 
 <dl>
     <dt>Sun 03 October 2010</dt>
-    <dd><a href="http://lazka.github.io/test.html">Test</a></dd>
+    <dd><a href="/test.html">Test</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
