--- a/authors.html
+++ b/authors.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>Title - Authors</title>
-        <link rel="stylesheet" href="http://lazka.github.io/theme/css/main.css" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,18 +12,18 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://lazka.github.io/">Title </a></h1>
+                <h1><a href="/">Title </a></h1>
                 <nav><ul>
-                    <li><a href="http://lazka.github.io/pages/about-me.html">About Me</a></li>
-                    <li><a href="http://lazka.github.io/pages/projects.html">Projects</a></li>
-                    <li><a href="http://lazka.github.io/category/blog.html">Blog</a></li>
+                    <li><a href="/pages/about-me.html">About Me</a></li>
+                    <li><a href="/pages/projects.html">Projects</a></li>
+                    <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Title</h1>
     <ul>
-        <li><a href="http://lazka.github.io/author/christoph-reiter.html">Christoph Reiter</a> (1)</li>
+        <li><a href="/author/christoph-reiter.html">Christoph Reiter</a> (1)</li>
     </ul>
 </section>
 
