--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,7 @@
     <link rel="next" title="Projects" href="projects.html" />
     <link rel="prev" title="Welcome" href="../index.html" />
    
-  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 
