--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,7 +26,7 @@
     <link rel="top" title="~ 0.1 documentation" href="../index.html" />
     <link rel="prev" title="About Me" href="about.html" />
    
-  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 
