--- a/search.html
+++ b/search.html
@@ -32,7 +32,7 @@
   <script type="text/javascript" id="searchindexloader"></script>
   
    
-  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 
