--- a/_source_/alabaster/layout.html
+++ b/_source_/alabaster/layout.html
@@ -2,6 +2,7 @@
 {%- block extrahead %}
   {{ super() }}
   <link href='//fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   {% if theme_touch_icon %}
     <link rel="apple-touch-icon" href="{{ pathto('_static/' ~ theme_touch_icon, 1) }}" />
   {% endif %}
