--- a/_source_/alabaster/layout.html
+++ b/_source_/alabaster/layout.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 {% endblock %}
 {%- block relbar2 %}{% endblock %}
+{%- block relbar1 %}{% endblock %}
 {%- block footer %}
     <div class="footer">
       &copy;{{ copyright }}.
