--- a/posts.html
+++ b/posts.html
@@ -17,7 +17,8 @@
         VERSION:     '0.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
-        HAS_SOURCE:  false
+        HAS_SOURCE:  false,
+        SOURCELINK_SUFFIX: '.txt'
       };
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
@@ -25,7 +26,6 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="top" title="lazka.github.io" href="index.html" />
     <link rel="next" title="[2014-07] Quod Libet 3.2 Highlights" href="posts/2014-07_ql32/index.html" />
     <link rel="prev" title="Contributions" href="pages/opensource.html" />
    
