--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
+    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Projects" href="pages/projects.html" />
@@ -34,14 +35,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
 
   </head>
-  <body role="document">  
+  <body>  
 
     <div class="document">
       <div class="documentwrapper">
         <div class="bodywrapper">
           <div class="body" role="main">
             
-  <p>Hi, I&#8217;m Christoph Reiter...</p>
+  <p>Hi, I’m Christoph Reiter…</p>
 <div class="figure align-right" id="id1">
 <a class="reference internal image-reference" href="_images/il.jpg"><img alt="_images/il.jpg" src="_images/il.jpg" style="width: 250px;" /></a>
 <p class="caption"><span class="caption-text">Mývatn / Iceland</span></p>
